--- a/euro/templates/euro/home.html
+++ b/euro/templates/euro/home.html
@@ -84,7 +84,7 @@
                     <span class='pays'>{{rencontre.pays1}}</span>
                     
                     {% if username %}
-                    {% if edit %}
+                    {% if edit and not rencontre.passed %}
                     <label>
                             <input class="entry" {% if rencontre.allowNull = True %}disabled='disabled'{% endif %} id = 'score_{{rencontre.id}}_radio_1' type="radio" name="score_{{rencontre.id}}_radio" value="1" {% if pronostics|winner:rencontre == 1 %}checked='checked'{% endif %}/>
                             <img src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />
