--- a/euro/templates/euro/nexts.html
+++ b/euro/templates/euro/nexts.html
@@ -41,6 +41,23 @@
                     
                     {% if username %}
                     
+                    {% if rencontre.passed %}
+                    <label>
+                            <input class="entry" disabled='disabled' id = 'score_{{rencontre.id}}_radio_1' type="radio" name="score_{{rencontre.id}}_radio" value="1" {% if pronostics|winner:rencontre == 1 %}checked='checked'{% endif %}/>
+                            <img src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />
+                    </label>
+                    
+                    
+                    <input class="score entry" type="number" id="score_{{rencontre.id}}_1" min="0" value="{{pronostics|score1:rencontre}}" disabled='disabled'/>
+                
+                    <input class="score entry" type="number" id="score_{{rencontre.id}}_2" min="0" value="{{pronostics|score2:rencontre}}" disabled='disabled'/>
+                    
+                    
+                    <label>
+                            <input class="entry" disabled='disabled' id = 'score_{{rencontre.id}}_radio_2' type="radio" name="score_{{rencontre.id}}_radio" value="2" {% if pronostics|winner:rencontre == 2 %}checked='checked'{% endif %}/>
+                            <img src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />
+                    </label>
+                    {% else %}
                     <label>
                             <input class="entry" {% if rencontre.allowNull = True %}disabled='disabled'{% endif %} id = 'score_{{rencontre.id}}_radio_1' type="radio" name="score_{{rencontre.id}}_radio" value="1" {% if pronostics|winner:rencontre == 1 %}checked='checked'{% endif %}/>
                             <img src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />
@@ -81,7 +98,7 @@
                         $('#score_{{rencontre.id}}_1').on('change', winf);
                         $('#score_{{rencontre.id}}_2').on('change', winf);
                     </script>
-                    
+                    {% endif %}
                     {% else %}
                     <span> - </span>
                     {% endif %}
