--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -56,7 +56,7 @@
                     <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#" data-toggle="modal" data-target="#renewPswdDialog"><i class="fa fa-key" aria-hidden="true"> Change password </i></a></li>
-                        <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"> Change email</i></a></li> 
+                        <li><a href="#" data-toggle="modal" data-target="#renewMail"><i class="fa fa-envelope-o" aria-hidden="true"> Change email</i></a></li> 
                     </ul>
                 </li>
                 
@@ -144,7 +144,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">{{user.username}}</h4>
+                    <h4 class="modal-title">{{username}}</h4>
                 </div>
                 <div class="modal-body">
                     <form id="renewPswdDialogForm">
@@ -224,7 +224,62 @@
         </div>
     </div>
     
+    {% if username %}
+        
+<div id="renewMail" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">{{username}}</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="renewMailForm">
+                        {% csrf_token %}
+                        <div class="login-form">
+                            <div class="form-group ">
+                                <input type="text" class="form-control" placeholder="{{self.user.email}}" id="newemail" name="newemail" aria-hidden="true"/>
+                                <i class="fa fa-enveloppe" aria-hidden="true"></i>
+                            </div>
+                            
+                            <button type="submit" class="reset-btn" id="changeMail-btn">
+                            &nbsp; OK </button>
+
+
+                        </div>
+                    </form>
+                </div>
+                
+                <script>         
+                    $( "#renewMailForm" ).submit(function( e ) {
+                        
+                        e.preventDefault(); 
+                        var values = {};
+                        values['email'] = $('#newemail').val()
+                        values['csrfmiddlewaretoken']=$('input[name=csrfmiddlewaretoken]').val()
+                        
+                        $.post("{% url 'euro:changeEmail' %}", values, 
+                               
+                               function (data, textStatus, jqXHR) {
+                                    if (!data['success']) {
+                                        alert(data['error']);
+                                    }
+                                    location.reload();    
+                                }
+                           , 'json').error(formSave.error); // making ajax post
+                    return false;
+                    });
+
+                </script>
+                
+            </div>
+
+        </div>
+    </div>
     
+    {% endif %}
     
     
     
