--- a/euro/templates/euro/classement.html
+++ b/euro/templates/euro/classement.html
@@ -8,7 +8,7 @@
     <a href="#" data-toggle="modal" data-target="#team_desc"><span class="glyphicon glyphicon-pencil">...</span></a>
     {% endif %}
 </div>
-<h2>Total Points <span class="label label-warning">{{team.score}} </span></h2>
+<h2>Total Points <span class="label label-warning">{{team.sc}} </span></h2>
 <br/>
 {% if self.team = team %}
 <div id="team_desc" class="modal fade" role="dialog">
