--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -5,6 +5,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Euro 2016</title>
     
     <link rel="shortcut icon" type="image/png" href="{% static 'euro/images/favicon.png' %}"/>
