--- a/euro/templates/euro/base.html
+++ b/euro/templates/euro/base.html
@@ -36,11 +36,20 @@
 </head>
 
 <body data-spy="scroll" data-target="#myScrollspy" data-offset="20">
+
+    
+    
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>                        
+                </button>
                 <a class="navbar-brand" href="{% url 'euro:landing' %}"><img src="{% static 'euro/images/logo.jpg' %}" alt="Euro 2016" height="32" /></a>
             </div>
+             <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li class="{% active request 'euro:home' %}"><a href="{% if username %}{% url 'euro:home' %}{% else %}{% url 'euro:nexts' %}{% endif %}">Accueil</a></li>
                 <li class="{% active request 'euro:nexts' %}"><a href="{% url 'euro:nexts' %}">Par date</a></li>
@@ -69,6 +78,7 @@
                 <li><a href="#" data-toggle="modal" data-target="#myModalLogin"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
                 {% endif %}
             </ul>
+            </div>
         </div>
     </nav>
     
