--- a/euro/templates/euro/home.html
+++ b/euro/templates/euro/home.html
@@ -56,111 +56,22 @@
 
 
 <br/>
+    <div class="col-sm-12">
 {% if latest_rencontre_list %} 
 <h2>Prochains matchs:</h2>
-<div class="col-sm-12">
-        {% for date in latest_rencontre_date %}
-        <div class="marged">
-        <div class="panel panel-default" id="section{{forloop.counter}}">
-            <div class="panel-heading">
-                <span class="date-match">{{date |  date:'l d F Y'}}</span>
-            </div>
-
-            <div class="panel-body">
-
-                {% for rencontre in latest_rencontre_list %} 
-                {% if rencontre.date == date %}
-
-                <div class="well">
-                    {% if edit %}
-                        <script type="text/javascript">
-                            formSave.fields['score_{{rencontre.id}}_1']= "score_{{rencontre.id}}_1"
-                            formSave.fields['score_{{rencontre.id}}_2']= "score_{{rencontre.id}}_2"
-                        </script>
-                    {% endif %}
-                    <img src="{% static 'euro/flags/' %}{{rencontre.pays1.icone}}.png" alt="{{rencontre.pays1}}"  class="drapeau"/>
-                    
-                    
-                    <span class='pays'>{{rencontre.pays1}}</span>
-                    
-                    {% if username %}
-                    {% if edit and not rencontre.passed %}
-                    <label>
-                            <input class="entry" {% if rencontre.allowNull = True %}disabled='disabled'{% endif %} id = 'score_{{rencontre.id}}_radio_1' type="radio" name="score_{{rencontre.id}}_radio" value="1" {% if pronostics|winner:rencontre == 1 %}checked='checked'{% endif %}/>
-                            <img src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />
-                    </label>
-                    
-                    <input class="score entry" type="number" id="score_{{rencontre.id}}_1" min="0" value="{{pronostics|score1:rencontre}}"/>
-                    <input class="score entry" type="number" id="score_{{rencontre.id}}_2" min="0" value="{{pronostics|score2:rencontre}}"/>
-                    <label>
-                            <input class="entry" {% if rencontre.allowNull = True %}disabled='disabled'{% endif %} id = 'score_{{rencontre.id}}_radio_2' type="radio" name="score_{{rencontre.id}}_radio" value="2" {% if pronostics|winner:rencontre == 2 %}checked='checked'{% endif %}/>
-                            <img src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />
-                    </label>
-                    <script type="text/javascript">
-                        var winf = function () {
-                                if ($('#score_{{rencontre.id}}_1').val() > $('#score_{{rencontre.id}}_2').val()) {
-                                    $('#score_{{rencontre.id}}_radio_1').prop("checked", true)
-                                    $('#score_{{rencontre.id}}_radio_2').prop('disabled',true)
-                                    $('#score_{{rencontre.id}}_radio_1').prop('disabled',true)
-                                }
-                                else if ($('#score_{{rencontre.id}}_1').val() < $('#score_{{rencontre.id}}_2').val()) {
-                                    $('#score_{{rencontre.id}}_radio_2').prop("checked", true)
-                                    $('#score_{{rencontre.id}}_radio_2').prop('disabled',true)
-                                    $('#score_{{rencontre.id}}_radio_1').prop('disabled',true)
-                                }
-                                else {
-                                    $('#score_{{rencontre.id}}_radio_2').prop('disabled',{% if rencontre.allowNull = False %}false{% else %}true{% endif %})
-                                    $('#score_{{rencontre.id}}_radio_1').prop('disabled',{% if rencontre.allowNull = False %}false{% else %}true{% endif %})
-                                    $('#score_{{rencontre.id}}_radio_2').prop("checked", false)
-                                    $('#score_{{rencontre.id}}_radio_1').prop("checked", false)
-                                }
-        
-                        }
-                        $('#score_{{rencontre.id}}_1').on('change', winf);
-                        $('#score_{{rencontre.id}}_2').on('change', winf);
-                    </script>
-                    {% else %}
-                    <label>
-                            <input class="entry" {% if rencontre.allowNull = True %}disabled='disabled'{% endif %} id = 'score_{{rencontre.id}}_radio_1' type="radio" name="score_{{rencontre.id}}_radio" value="1" {% if pronostics|winner:rencontre == 1 %}checked='checked'{% endif %}/>
-                            <img src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />
-                    </label>
-                    <input class="score entry" type="number" id="score_{{rencontre.id}}_1" min="0" value="{{pronostics|score1:rencontre}}" disabled/>
-                    <input class="score entry" type="number" id="score_{{rencontre.id}}_2" min="0" value="{{pronostics|score2:rencontre}}" disabled/>
-                     <label>
-                            <input class="entry" {% if rencontre.allowNull = True %}disabled='disabled'{% endif %} id = 'score_{{rencontre.id}}_radio_2' type="radio" name="score_{{rencontre.id}}_radio" value="2" {% if pronostics|winner:rencontre == 2 %}checked='checked'{% endif %}/>
-                            <img src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />
-                    </label>
-                    
-                    
-                    
-                    {% endif %}
-                    {% else %}
-                    <span> - </span>
-                    {% endif %}
-
-                    <span class='pays'>{{rencontre.pays2}}</span>
-                    
-                    <img src="{% static 'euro/flags/' %}{{rencontre.pays2.icone}}.png" alt="{{rencontre.pays2}}"  class="drapeau"/> &nbsp;
-                    
-                </div>
-                {% endif %} 
-                {% endfor %}
-            </div>
-
-        </div>
-        </div>
     
-
-{% endfor %}
-</div>
+    
+    {% include 'euro/bydate.html' %}
+    
 {% else %}
 <p>Pas de prochains matchs.</p>
 {% endif %} 
-
-
+    </div>
+    <br/>
+<div  class="col-sm-12">
 {% if latest_pronostics %} 
 <h2>Derniers matchs:</h2>
-<div class="col-sm-12">
+<div class="col-sm-11">
     
     {% for resultat in resultats %} 
     <div class="panel panel-default" id="section{{forloop.counter}}">
@@ -210,7 +121,7 @@
 {% else %}
 <p>Pas de précédents résultats.</p>
 {% endif %} 
-
+    </div>
 
 </div>
 {% endblock content %}
