--- a/euro/templates/euro/aboutus.html
+++ b/euro/templates/euro/aboutus.html
@@ -10,7 +10,7 @@ A propos de ce projet
 <hr class="featurette-divider">
 <div class="row">
       <div class="featurette">
-        <img class="featurette-image img-circle pull-left" src="{% static 'euro/images/gaetan.png' %}" style="width:256px; margin-right:20px">
+        <img class="featurette-image img-circle pull-left" src="{% static 'euro/images/gaetan.jpg' %}" style="width:256px; margin-right:20px">
         <h2 class="featurette-heading">Gaëtan Eleouet. <span class="text-muted">Développeur artistique</span></h2>
         <p class = "lead">Après avoir lu les circonstances qui ont mené au développement de ce projet vous comprendrez pourquoi j'adore les challenges.</p>
         <p>Ingénieur en développement logiciel, artisan qui aime son métier, j'ai aujourd'hui tout développé (ou presque) du plus simple au plus complexe principalement dans le domaine de la Finance de marché.
