--- a/euro/templates/euro/nexts.html
+++ b/euro/templates/euro/nexts.html
@@ -7,7 +7,7 @@
 <div>
 
 
-    <nav class="col-sm-1 desc" >
+    <nav class="col-sm-1 desc" id="myScrollspy">
         <ul class="nav nav-pills nav-stacked">
 
             {% for date in latest_rencontre_date %}
