change points: ajout difference de but exacte

--- a/euro/templates/euro/faq.html
+++ b/euro/templates/euro/faq.html
@@ -34,11 +34,14 @@
         </div>
 
         <div class="panel-body">
-            Comme nous considérons que tous les pronostics sont bons, le calcul des scores est fait de manière à vous faire gagner des points aux maximum.
+            Comme nous considérons que tous les pronostics sont bons, le calcul des scores est fait de manière à vous faire gagner des points au maximum:
             <ul>
-                <li>Le bon score + le bon vainqueur (match null inclu): 3 points</li>
-                <li>Le bon score pour une des équipe : 1 point</li>
+                <li>Le bon score + le bon vainqueur (match null inclu): 5 points</li>
+                <li>La bonne différence de buts : 3 points</li>
+                <li>Le bon vainqueur et le bon score pour une des équipes: 1 point</li>
+                <li>Le bon score pour une des équipes : 1 point</li>
                 <li>Le bon vainqueur mais pas le bon score : 1 point</li>
+                <br/>
                 <li>Aucun des cas ci-dessus : On itère sur le prochain match</li>
                 <br>
             </ul>
