--- a/euro/templates/euro/faq.html
+++ b/euro/templates/euro/faq.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="panel-body">
-            Le score d'une équipes est calculée en moyennant sur la somme des scores des membres.
+            Le score d'une équipe est calculé à partir des scores des membres de l'équipe.
         </div>
     </div>
 
