Questionnaire derive de match (ajout du template, onglet derive)

--- a/euro/static/euro/style.css
+++ b/euro/static/euro/style.css
@@ -222,10 +222,11 @@ ul.nav-pills {
     position: fixed;
 }
 
-.cssfilters label > input {
+
+/*.cssfilters label > input {*/
     /* HIDE RADIO */
-    display: none;
-}
+/*    display: none;
+} */
 
 
 
